[metadata]
name = dsa 
version = 0.0.1
author = Thibault Vatter 
author_email = thibault@vatter.io
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tvatter/dsa
project_urls =
    Bug Tracker = https://github.com/tvatter/dsa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src